[package]
name = "swarm_it"
version = "0.1.1"
authors = ["mgr-inz-rafal <rchabowski@gmail.com>"]
edition = "2018"
description = "This library will allow you to carry objects around by using the automatically conducted swarm of carriers"
license = "MIT"
documentation = "https://github.com/mgr-inz-rafal/swarm"
homepage = "https://github.com/mgr-inz-rafal/swarm"
repository = "https://github.com/mgr-inz-rafal/swarm"

[dependencies]
approx = "0.3.2"
rand = "0.7.0"